--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   <body>
     <h2>Hello gitHub!</h2>
     <h3>Mironshox registratsiyadan o'tolmayopti.</h3>
+    <img
+      src="https://static.vecteezy.com/system/resources/thumbnails/024/179/673/small_2x/pure-blue-sky-white-clouds-the-strong-light-through-the-clouds-shines-straight-on-the-endless-sea-of-white-tulip-flowers-ai-generative-photo.jpg"
+      alt=""
+    />
   </body>
 </html>
